# nummus

./: .codespellignorelines  .coveragerc  .gitignore  .pre-commit-config.yaml  .prettierrc  .unibeautifyrc  Dockerfile  README.md  pylintrc  pyproject.toml  setup.py
.github/workflows/: coverage.yml  deploy.yml  lint.yml  static-analysis.yml  test.yml
nummus/: __init__.py  __main__.py  commands.py  common.py  custom_types.py  encryption.py  encryption_fb.py  exceptions.py  health_checks.py  main.py  portfolio.py  sql.py  utils.py  web.py  web_assets.py  web_utils.py
nummus/commands/: __init__.py  backup.py  backup_.py  base.py  change_password.py  clean.py  create.py  export.py  export_.py  health.py  health_check.py  health_check_.py  import_files.py  migrate.py  summarize.py  summarize_.py  unlock.py  unlock_.py  update_assets.py  web.py  web_.py
nummus/controllers/: __init__.py  account.py  accounts.py  allocation.py  assets.py  auth.py  base.py  budgeting.py  cash_flow.py  common.py  dashboard.py  emergency_fund.py  health.py  import_file.py  income.py  labels.py  net_worth.py  performance.py  settings.py  spending.py  tags.py  transaction.py  transaction_categories.py  transaction_category.py  transactions.py
nummus/encryption/: __init__.py  aes.py  top.py
nummus/health_checks/: __init__.py  base.py  category_direction.py  database_integrity.py  duplicate_transactions.py  empty_fields.py  missing_asset_link.py  missing_valuations.py  outlier_asset_price.py  overdrawn_accounts.py  typos.py  unbalanced_transfers.py  uncleared_transactions.py  unlinked_transactions.py  unlocked_transactions.py  unnecessary_slits.py  unused_categories.py
nummus/importers/: __init__.py  base.py  raw_csv.py
nummus/migrations/: __init__.py  base.py  v0_10.py  v0_13.py  v0_15.py  v0_16.py  v0_2.py  v_0_2.py
nummus/models/: __init__.py  account.py  asset.py  base.py  base_uri.py  budget.py  config.py  credentials.py  currency.py  health_checks.py  imported_file.py  label.py  tag.py  transaction.py  transaction_category.py  utils.py
nummus/static/: tailwind.config.js
nummus/templates/: index-content.jinja  index.html  index.jinja  page.jinja  transaction.html  transactions.html
nummus/web/: __init__.py  assets.py  common.py  controller_account.py  controller_accounts.py  controller_asset.py  controller_assets.py  controller_budget.py  controller_budgets.py  controller_config.py  controller_html.py  controller_portfolio.py  controller_transaction.py  controller_transactions.py  extension.py  server.py  server_base.py  server_debug.py  server_production.py  utils.py
tests/: __init__.py  __main__.py  base.py  conftest.py  mock_yfinance.py  test_commands.py  test_common.py  test_encryption.py  test_exceptions.py  test_global_config.py  test_main.py  test_math.py  test_portfolio.py  test_sql.py  test_utils.py  test_web.py  test_web_assets.py  test_web_utils.py
tests/commands/: test_backup.py  test_base.py  test_change_password.py  test_clean.py  test_create.py  test_export.py  test_health.py  test_health_check.py  test_import_files.py  test_migrate.py  test_summarize.py  test_unlock.py  test_update_assets.py
tests/controllers/: __init__.py  base.py  conftest.py  test_account.py  test_accounts.py  test_allocation.py  test_assets.py  test_auth.py  test_base.py  test_budgeting.py  test_cash_flow.py  test_common.py  test_dashboard.py  test_emergency_fund.py  test_health.py  test_import_file.py  test_net_worth.py  test_performance.py  test_transaction.py  test_transaction_categories.py  test_transaction_category.py  test_transactions.py
tests/data/: cert_not_ss.pem  cert_ss.pem  custom_importer.py  key_not_ss.pem  key_ss.pem  transactions_bad_category.csv  transactions_extras.csv  transactions_investments.csv  transactions_investments_bad_category.csv  transactions_investments_missing0.csv  transactions_investments_missing1.csv  transactions_lacking.csv  transactions_required.csv
tests/encryption/: test_aes.py
tests/health_checks/: test_base.py  test_category_direction.py  test_database_integrity.py  test_duplicate_transactions.py  test_empty_fields.py  test_missing_asset_link.py  test_missing_valuations.py  test_outlier_asset_price.py  test_overdrawn_accounts.py  test_typos.py  test_unbalanced_transfers.py  test_uncleared_transactions.py  test_unlinked_transactions.py  test_unlocked_transactions.py  test_unnecessary_splits.py  test_unused_categories.py
tests/importers/: test_base.py  test_raw_csv.py
tests/migrations/: test_base.py  test_v0_10.py  test_v0_13.py  test_v0_15.py  test_v0_16.py  test_v0_2.py  test_v_0_2.py
tests/models/: conftest.py  test_account.py  test_asset.py  test_base.py  test_base_uri.py  test_budget.py  test_config.py  test_credentials.py  test_currency.py  test_health_checks.py  test_imported_file.py  test_transaction.py  test_transaction_category.py  test_utils.py
tests/portfolio/: test_backup_restore.py  test_change_key.py  test_import.py  test_open.py  test_update_assets.py
tests/web/: __init__.py  base.py  test_assets.py  test_common.py  test_controller_account.py  test_controller_accounts.py  test_controller_asset.py  test_controller_assets.py  test_controller_budget.py  test_controller_budgets.py  test_controller_config.py  test_controller_html.py  test_controller_portfolio.py  test_controller_transaction.py  test_controller_transactions.py  test_server.py  test_server_base.py  test_server_debug.py  test_server_production.py  test_utils.py
tools/: build_docker.sh  format_all.py  formatters.sh  linters.sh  make_test_portfolio.py  profile_get_value.py  profile_web_call.py  run_tailwindcss.py
typings/flask_assets/: __init__.pyi
typings/flask_login/: __init__.pyi  login_manager.pyi  mixins.pyi  utils.pyi
typings/jsmin/: __init__.pyi
typings/numpy_financial/: __init__.pyi  _financial.pyi
typings/prometheus_flask_exporter/: __init__.pyi  multiprocess.pyi
typings/pytailwindcss/: __init__.pyi
typings/pytest/: __init__.pyi
typings/sqlcipher3/: __init__.pyi
typings/yfinance/: __init__.pyi  base.pyi  exceptions.pyi  ticker.pyi
(+298 files in other folders)
