[build-system]
requires = ["setuptools", "wheel", "witch-ver"]

[tool.isort]
profile = "black"
float_to_top = true
force_alphabetical_sort_within_sections = true

[tool.ruff]
target-version = "py38"
select = [
    "RUF",   # ruff
    "F",     # pyflakes
    "W",     # pycodestyle warnings
    "E",     # pycodestyle errors
    "N",     # pep8-naming
    "D",     # pydocstyle
    "UP",    # pyupgrade
    "YTT",   # flake8-2020
    "ANN",   # flake8-annotations
    "ASYNC", # flask8-async
    "S",     # flake8-bandit
    #"BLE",  # flake8-blind-except
    #"FBT",  # flake8-boolean-trap
    #"B",    # flake8-bugbear
    #"A",    # flake8-builtins
    #"COM",  # flake8-commas
    #"C4",   # flake8-comprehensions
    #"DTZ",  # flake8-datetimez
    #"T10",  # flake8-debugger
    #"EM",   # flake8-errmsg
    #"EXE",  # flake8-executable
    #"FA",   # flake8-future-annotations
    #"ISC",  # flake8-implicit-str-concat
    #"ICN",  # flake8-import-conventions
    #"LOG",  # flake8-logging
    #"INP",  # flake8-no-pep420
    #"PIE",  # flake8-pie
    #"T20",  # flake8-print
    #"PYI",  # flake8-pyi
    #"Q",    # flake8-quotes
    #"RSE",  # flake8-raise
    #"RET",  # flake8-return
    #"SLF",  # flake8-self
    #"SIM",  # flake8-simplify
    #"TID",  # flake8-tidy-imports
    #"TCH",  # flake8-type-checking
    #"INT",  # flake8-gettext
    #"ARG",  # flake8-unused-argument
    #"PTH",  # flake8-use-pathlib
    #"TD",   # flake8-todos
    #"FIX",  # flake8-fixme
    #"ERA",  # eradicate
    #"PGH",  # pygrep-hooks
    #"PL",   # pylint
    #"TRY",  # tryceratops
    #"FLY",  # flynt
    #"PERF", # perflint
    #"FURB", # refurb
]

ignore = [
    "ANN101", # missing type annotation for self
    "ANN102", # missing type annotation for cls
]

exclude = [
    "migrations",
    "__pycache__",
    "manage.py",
    "settings.py",
    "env",
    ".env",
    "venv",
    ".venv",
]

[tool.ruff.pydocstyle]
convention = "google"


[tool.ruff.per-file-ignores]
"tests/*.py" = [
    "D100", # Disable missing docstrings in tests
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
]

[tool.ruff.flake8-annotations]
suppress-dummy-args = true
